--- a/MyWebsite/MyWebsite.csproj
+++ b/MyWebsite/MyWebsite.csproj
@@ -20,6 +20,18 @@
     <Content Remove="ClientApp\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="ClientApp\components\Statistic.tsx" />
+    <None Remove="ClientApp\models\TodoModel.ts" />
+    <None Remove="ClientApp\store\Statistic.ts" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <TypeScriptCompile Include="ClientApp\components\Statistic.tsx" />
+    <TypeScriptCompile Include="ClientApp\models\TodoModel.ts" />
+    <TypeScriptCompile Include="ClientApp\store\Statistic.ts" />
+  </ItemGroup>
+
   <Target Name="DebugRunWebpack" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('wwwroot\dist') ">
     <!-- Ensure Node.js is installed -->
     <Exec Command="node --version" ContinueOnError="true">
